🐣👀 Updated with Glitch

--- a/public/106.html
+++ b/public/106.html
@@ -1,6 +1,10 @@
+<div class="cwalkh leftwalk"></div>
+<div class="cwalkh rightwalk"></div>
+<div class="cwalkv topwalk"></div>
+<div class="cwalkv bottomwalk"></div>
+
 <div class="block-element tright">
-    <div class="buildings">
-        <div class="building"></div>
+    <div class="park">
     </div>
 </div>
 <div class="block-element bright">
