--- a/public/112.html
+++ b/public/112.html
@@ -1,3 +1,7 @@
+<div class="cwalkh leftwalk"></div>
+<div class="cwalkh rightwalk"></div>
+<div class="cwalkv topwalk"></div>
+
 <div class="block-element tright">
     <div class="buildings">
         <div class="building"></div>
