--- a/public/201.html
+++ b/public/201.html
@@ -1,13 +1,9 @@
-<div class="border-top"></div>
-<div class="border-bottom"></div>
-<div class="poem"><p>
-    workers that fireball the school and workplace<br><br>
-    one white cyborg and seven dry machines<br><br>
-    vanity terrors in dupes, movie screens<br><br>
-    broad-based projects of marble operation</p>
+<div class="poem"><p></p>
 </div>
 
 <div class="block-element left">
+    <div class="park">
+    </div>
     <div class="buildings">
         <div class="building"></div>
     </div>
