--- a/public/305.html
+++ b/public/305.html
@@ -1,4 +1,11 @@
+<div class="poem">
+    <p></p>
+</div>
 
+<div class="block-element left">
+    <div class="park">
+    </div>
+</div>
 <div class="block-element tright">
     <div class="buildings">
         <div class="building"></div>
@@ -8,7 +15,4 @@
     <div class="buildings">
         <div class="building"></div>
     </div>
-</div>
-<div class="block-element left">
-    <div class="park"></div>
 </div>
