--- a/public/309.html
+++ b/public/309.html
@@ -1,17 +1,15 @@
+<div class="poem">
+    <p></p>
+</div>
+
 <div class="block-element right">
     <div class="buildings">
-        <div class="building"></div>
-        <div class="building"></div>
-        <div class="building"></div>
-        <div class="building"></div>
         <div class="building"></div>
         <div class="building"></div>
     </div>
 </div>
 <div class="block-element left">
     <div class="buildings">
-        <div class="building"></div>
-        <div class="building"></div>
         <div class="building"></div>
         <div class="building"></div>
     </div>
