--- a/public/314.html
+++ b/public/314.html
@@ -1,8 +1,15 @@
+<div class="cwalkh leftwalk"></div>
+<div class="cwalkh rightwalk"></div>
+<div class="cwalkv topwalk"></div>
+
 <div class="block-element left">
-    <div class="buildings">
-        <div class="building"></div>
+    <div class="park"></div>
+        <div class="buildings">
+            <div class="building"></div>
+        </div>
     </div>
 </div>
+
 <div class="block-element tright">
     <div class="buildings">
         <div class="building"></div>
