--- a/public/105.html
+++ b/public/105.html
@@ -1,11 +1,7 @@
-<div class="border-top"></div>
-<div class="border-bottom"></div>
+<!-- <div class="border-top"></div>
+<div class="border-bottom"></div> -->
 
-<div class="poem">
-  <p>Bank as beauteous order that shelves<br><br>
-    Talking is work using writing and speech<br><br>
-    The Carrere and shadow, moon and architect<br><br>
-    In hoops, a utility is technical</p>
+<div class="poem"><p></p>
 </div>
         
 <div class="block-element left">
