--- a/public/202.html
+++ b/public/202.html
@@ -1,3 +1,8 @@
+<div class="border-top"></div>
+<div class="border-bottom"></div>
+<div class="poem"><p></p>
+</div>
+
 <div class="block-element right">
     <div class="buildings">
         <div class="building"></div>
