--- a/public/311.html
+++ b/public/311.html
@@ -1,12 +1,15 @@
-<div class="block-element tright">
-    <div class="park">
-    </div>
+<div class="poem">
+    <p></p>
 </div>
-<div class="block-element bright">
+
+<div class="block-element right">
     <div class="buildings">
         <div class="building"></div>
     </div>
 </div>
 <div class="block-element left">
+    <div class="buildings">
+        <div class="building"></div>
+    </div>
     <div class="park"></div>
 </div>
